--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "lumx_responsiveTabs",
+    "name": "lumx-responsiveTabs",
     "description": "The first responsive front-end framework based on AngularJS & Google Material Design specifications",
     "kewords": [
         "AngularJS",
@@ -7,7 +7,7 @@
         "Framework"
     ],
     "homepage": "http://ui.lumapps.com",
-    "version": "0.0.1",
+    "version": "1.0.9",
     "authors": [
         "LumApps"
     ],
@@ -19,7 +19,7 @@
     "repository":
     {
         "type": "git",
-        "url": "git://github.com/lumapps/lumx.git"
+        "url": "https://github.com/giuseppeLeggero/lumX.git"
     },
     "ignore": [
         "**/.*",
